infra/traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: kube-system
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.3
          args:
            - --api.insecure
            - --providers.kubernetesingress
            - --providers.kubernetesingress.ingressclass=traefik
            - --entryPoints.web.address=:80
            - --entryPoints.websecure.address=:443
            - --entryPoints.websecure.http.tls
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: dashboard
              containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-service
  namespace: kube-system
spec:
  type: LoadBalancer
  ports:
    - name: web
      targetPort: 80
      port: 80
    - name: websecure
      targetPort: 443
      port: 443
    - name: dashboard
      targetPort: 8080
      port: 8080
  selector:
    app: traefik
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
  namespace: kube-system
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: traefik.io/ingress-controller
